@@ -409,3 +409,4 @@ Revision	Version Updated		Log Message
 470		C++			Make all output functions const
 471		C++			Unciv reforms give province improvements
 472		C++			Configuration defaults to AHD instead of vanilla V2
+473		C++			More automatic import of localisation files
